Updated Raven to be more AppHarbor friendly

--- a/KanBan.Demo/Web.config
+++ b/KanBan.Demo/Web.config
@@ -7,15 +7,13 @@
   <configSections>
     <section name="dotless" type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core" />
   </configSections>
-  <connectionStrings>
-    <add name="RAVENHQ_CONNECTION_STRING" connectionString="Url=http://localhost:8080" />
-  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="true" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="RAVENHQ_CONNECTION_STRING" value="Url=http://localhost:8080" />
   </appSettings>
   <system.web>
     <customErrors mode="Off"/>
