Bug in the parsing

--- a/KanBan.Demo/Web.config
+++ b/KanBan.Demo/Web.config
@@ -13,7 +13,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="RAVENHQ_CONNECTION_STRING" value="Url=http://localhost:8080" />
+    <add key="RAVENHQ_CONNECTION_STRING" value="Url=http://localhost:8080;ApiKey=" />
   </appSettings>
   <system.web>
     <customErrors mode="Off"/>
