--- a/KanBan.Demo/KanBan.Demo.csproj
+++ b/KanBan.Demo/KanBan.Demo.csproj
@@ -176,11 +176,17 @@
     <Compile Include="Controllers\RavenController.cs" />
     <Compile Include="Data\DocStore.cs" />
     <Compile Include="Eventing\DomainEvents.cs" />
+    <Compile Include="Eventing\UserMessages.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>UserMessages.resx</DependentUpon>
+    </Compile>
     <Compile Include="ExtensionMethods\NavigationLinkHelper.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Project.cs" />
+    <Compile Include="Models\UserTracking.cs" />
     <Compile Include="Models\WorkQueue.cs" />
     <Compile Include="Models\UserStory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -271,6 +277,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\ProjectList\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Eventing\UserMessages.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>UserMessages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
